# fear_the_creeper

./: .cz.toml  .gitignore  .gitmodules  CHANGELOG.md  README.md
.github/workflows/: kibot.yml  main.yml
.nix/: flake.nix
case/: .gitignore  gitignore  heights.csv  import_heights.py  pixel_stamp.py  process_image.py
case/.nix/: flake.nix
case/v2/: creeper_case_v2_case.stl  creeper_case_v2_face.stl  creeper_case_v2_lid.stl
case/v3/: creeper_case_v3_case.stl  creeper_case_v3_face.stl
hw/creeper/: .gitignore  creeper.kibot.yaml  creeper.kicad_pcb  creeper.kicad_prl  creeper.kicad_pro  creeper.kicad_sch  creeper.rules  creeper.symbols  fp-info-cache  fp-lib-table  ibom.config.ini  sym-lib-table
hw/creeper/components/: creeper (DigiKey).xlsx
hw/creeper/creeper.footprints/: BAT_3005.kicad_mod  CUI_CMT-1270S-SMT.kicad_mod  C_0603_1608Metric_Pad1.08x0.95mm_HandSolder.kicad_mod  C_0805_2012Metric_Pad1.18x1.45mm_HandSolder.kicad_mod  Github_jkorinth-fear_the_creeper.kicad_mod  IIS328DQTR_QFN50P400X400X185-25N.kicad_mod  LED_LG_T671-L2N1-1-Z.kicad_mod  LED_LPT67F-P1R2-35-1-20-R18_AMS-L.kicad_mod  LED_LPT67F-P1R2-35-1-20-R18_AMS-M.kicad_mod  (+14 more)
sw/: .gitignore  platformio.ini
sw/include/: iis328dq.h  lut.h
sw/scripts/: custom_targets.py  make_interval_table.py
sw/sim/: .gitignore  CMakeLists.txt  Makefile
sw/sim/inc/: attiny85.hpp  i2c_device.hpp  iis328dq.hpp  led.hpp  leds.h  log.h  mcu.hpp
sw/sim/src/: iis328dq.c  iis328dq.cpp  leds.cpp  main.cpp
sw/sounds/: creeper_hiss.h  creeper_hiss.py
sw/src/: I2CTinyBB.cpp  main.cpp  main.cpp.bak
(+49 files in other folders)
